--- a/templates/mars_facts.html
+++ b/templates/mars_facts.html
@@ -1,50 +1,27 @@
-<table border="1" class="dataframe">
+<table border="1" class="dataframe" id="html_tbl_css">
   <thead>
-    <tr style="text-align: right;">
-      <th></th>
+    <tr style="text-align: left;">
       <th>Mars Values</th>
-    </tr>
-    <tr>
-      <th></th>
-      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
-      <th>Equatorial Diameter:</th>
-      <td>6,792 km</td>
+      <td>3,475 km</td>
     </tr>
     <tr>
-      <th>Polar Diameter:</th>
-      <td>6,752 km</td>
+      <td>7.35 × 10^22 kg (0.01 Earths)</td>
     </tr>
     <tr>
-      <th>Mass:</th>
-      <td>6.39 × 10^23 kg (0.11 Earths)</td>
+      <td>The Earth</td>
     </tr>
     <tr>
-      <th>Moons:</th>
-      <td>2 (Phobos &amp; Deimos)</td>
+      <td>384,400 km</td>
     </tr>
     <tr>
-      <th>Orbit Distance:</th>
-      <td>227,943,824 km (1.38 AU)</td>
+      <td>27.3 days</td>
     </tr>
     <tr>
-      <th>Orbit Period:</th>
-      <td>687 days (1.9 years)</td>
-    </tr>
-    <tr>
-      <th>Surface Temperature:</th>
-      <td>-87 to -5 °C</td>
-    </tr>
-    <tr>
-      <th>First Record:</th>
-      <td>2nd millennium BC</td>
-    </tr>
-    <tr>
-      <th>Recorded By:</th>
-      <td>Egyptian astronomers</td>
+      <td>-233 to 123 °C</td>
     </tr>
   </tbody>
 </table>
