--- a/templates/index.html
+++ b/templates/index.html
@@ -24,44 +24,92 @@
     </div>
 
     <!--Actual Content-->
+    <div class='container'>
 
-    <!--Latest Mars News-->
-    <div>
-        <h3>Latest Mars News</h3>
-        <h4>{{ mars_data.title_1 }}</h4>
-        <p>{{ mars_data.paragraph }}</p>
+        <!--Latest Mars News-->
+        <div style="text-align: center;">
+            <h3>Latest Mars News</h3>
+            <h4>{{ mars_data.title_1 }}</h4>
+            <p>{{ mars_data.paragraph }}</p>
+        </div>
+        <!--Latest Mars News-->
+
+        <div class="row">
+
+            <div class="col-sm-8">
+                <!--Featured Mars Image-->
+                <div>
+                    <h3>Featured Mars Image</h3>
+                    <img src="{{mars_data.featured_img_url}}" style="height: 600px; width: 600px;">
+                </div>
+                <!--Featured Mars Image-->
+            </div>
+
+            <div class="col-sm-4">
+                <!--Mars Weather Update-->
+                <div>
+                    <h3>Mars Weather Update</h3>
+                    <p>{{ mars_data.weather_update }}</p>
+                </div>
+                <!--Mars Weather Update-->
+                
+                <!--Mars Facts-->
+                <div>
+                    <h3>Mars Facts</h3>
+                    {{mars_data.mars_facts|safe}}
+                </div>
+                <!--Mars Facts-->
+            </div>
+
+            <!--Mars Hemispheres-->
+            <div>
+                <h3>Mars's Hemispheres</h3>
+                    <div class="cards">
+                        {% for i in mars_data.hemisphere_image_urls %}
+                        <div class="card">
+                            <p>{{ i.title }}</p>
+                            <img src="{{ i.img_url }}"> 
+                        </div>
+                        {% endfor %}
+                    </div>
+                
+            </div>
+            <!--Mars Hemispheres-->
+
+        </div>
     </div>
-    <!--Latest Mars News-->
+    
 
-    <!--Featured Mars Image-->
-    <div>
+    <!-- Featured Mars Image-->
+    <!-- <div>
         <h3>Featured Mars Image</h3>
         <img src="{{mars_data.featured_img_url}}">
-    </div>
+    </div> -->
     <!--Featured Mars Image-->
 
     <!--Mars Weather Update-->
-    <div>
+    <!-- <div>
         <h3>Mars Weather Update</h3>
         <p>{{ mars_data.weather_update }}</p>
-    </div>
+    </div> -->
     <!--Mars Weather Update-->
     
     <!--Mars Facts-->
-    <div>
+    <!-- <div>
         <h3>Mars Facts</h3>
         <p>use Jupyter notebook to export the facts as a html table</p>
-    </div>
-    <!--Mars Facts-->
+    </div> -->
+    <!--Mars Facts -->
 
     <!--Mars Hemispheres-->
-    <div>
+    <!-- <div>
         <h3>Mars's Hemispheres</h3>
         {% for i in mars_data.hemisphere_image_urls %}
             <p>{{ i.title }}</p>
             <img src="{{ i.img_url }}">
         {% endfor %}
-    </div>
+    </div> -->
+    <!--Mars Hemispheres-->
 
 </body>
 </html>
